--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -42,7 +42,7 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
-								<h4 class="text-danger" th:text="*{issueCycleErrorMessage}"></h4>
+									<h4 class="text-danger" th:text="*{issueCycleErrorMessage}"></h4>
 									<form action="manager/bookingPayment"
 										th:action="@{/manager/bookingPayment}"
 										th:object="${issueCycleData}" method="GET">
@@ -64,7 +64,8 @@
 										<div>
 											<label class="control-label">Expected Return(In
 												Hours)</label> <input type="number" name="expectedInTime"
-												class="form-control" max="15" min="1" maxlength="2" required="required"/>
+												class="form-control" max="15" min="1" maxlength="2"
+												required="required" />
 										</div>
 										<div style="padding: 5px">
 											<button class="btn btn-primary">OK</button>
@@ -84,14 +85,14 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
-								<h4 class="text-danger" th:text="*{errorMessage}"></h4>
+									<h4 class="text-danger" th:text="*{errorMessage}"></h4>
 									<form action="manager/printBookingDetails"
 										th:action="@{/manager/printBookingDetails}"
 										th:object="${issueBookingData}" method="POST">
 										<div>
 											<label class="control-label"> Booking Id</label> <input
-												type="text" name="bookingId" class="form-control" maxlength="10"
-												required="required" />
+												type="text" name="bookingId" class="form-control"
+												maxlength="10" required="required" />
 										</div>
 										<div>
 											<label class="control-label">Select BiCycle</label> <select
@@ -104,8 +105,8 @@
 											</select>
 										</div>
 										<div style="padding: 5px">
-											<input type="submit" class="btn btn-primary" value="OK" />
-											<input type="reset" class="btn btn-info" />
+											<input type="submit" class="btn btn-primary" value="OK" /> <input
+												type="reset" class="btn btn-info" />
 										</div>
 									</form>
 								</div>
@@ -121,10 +122,35 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
-								<h4 class="text-danger" th:text="*{receiveCycleErrorMessage}"></h4>
+									<h4 class="text-danger" th:text="*{receiveCycleErrorMessage}"></h4>
 									<form action="manager/receiveCycle"
 										th:action="@{/manager/receiveCycle}"
 										th:object="${receiveCycleData}" method="POST">
+										<div>
+											<label class="control-label">Booking Id</label> <input
+												type="text" name="bookingId" class="form-control"
+												required="required" maxlength="10" />
+										</div>
+										<div style="padding: 5px">
+											<input type="submit" class="btn btn-primary" value="OK" /> <input
+												type="reset" class="btn btn-info" value="Reset" />
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="panel panel-info">
+							<div class="panel-heading">
+								<h3>Close Booking</h3>
+							</div>
+							<div class="panel-body">
+								<div class="col-md-8 col-sm-8 col-xs-8">
+									<h4 class="text-danger" th:text="*{closeMessage}"></h4>
+									<form action="manager/closeBooking"
+										th:action="@{/manager/closeBooking}"
+										th:object="${closeBookingData}" method="POST">
 										<div>
 											<label class="control-label">Booking Id</label> <input
 												type="text" name="bookingId" class="form-control"
