Fixed flow control of the project.

--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -60,7 +60,7 @@
 	</section>
 	<div class="register">
 		<div class="container">
-			<form action="#" th:action="@{/afterForgotPassword}"
+			<form action="#" th:action="@{/forgotPasswordConfirmation}"
 				th:object="${forgotPasswordData}" method="post">
 				<div class="row">
 					<div
