--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -60,7 +60,7 @@
 	</section>
 	<div class="register">
 		<div class="container">
-			<form action="#" th:action="@{/afterSetPassword}"
+			<form action="#" th:action="@{/setPasswordConfirmation}"
 				th:object="${setPasswordData}" method="post"
 				onsubmit="return passwordFunction(this);">
 				<div class="row">
