--- a/src/main/resources/templates/updatePickupPointDetails.html
+++ b/src/main/resources/templates/updatePickupPointDetails.html
@@ -34,6 +34,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-md-10">
+				<div class="text-danger"  th:text="${errorMessage}"></div>
 					<div class="panel panel-info">
 						<div class="panel-heading">Enter new data</div>
 						<div class="panel-body">
