Fixed css error on user views, added constant classes.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -77,6 +77,11 @@ hr {
 	color: #FC3;
 }
 
+.black-and-white {
+	background-color: black;
+	color: white;
+}
+
 /* All Section styles
 ------------------------------------- */
 .section-title {
