--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -22,9 +22,9 @@
 <!-- Font Icons
    ================================================== -->
 <link rel="stylesheet" href="/css/font-awesome.min.css"
-	th:href="@{css/font-awesome.min.css}" />
+	th:href="@{/css/font-awesome.min.css}" />
 <link rel="stylesheet" href="/css/et-line-font.css"
-	th:href="@{css/et-line-font.css}" />
+	th:href="@{/css/et-line-font.css}" />
 
 <!-- Main CSS
    	================================================== -->
@@ -62,22 +62,19 @@
 					<li><a href="/index.html#portfolio" class="smoothScroll">GALLERY</a></li>
 					<li><a href="/index.html#plan" class="smoothScroll">PLANS</a></li>
 					<li><a href="/index.html#contact" class="smoothScroll">CONTACT</a></li>
-					<li class="dropdown pull-right" sec:authorize="isAuthenticated()"><a
-						href="#" data-toggle="dropdown" class="dropdown-toggle"><i
-							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
+					<li class="dropdown"><a href="#" data-toggle="dropdown"
+						class="dropdown-toggle"><i class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
-						<ul class="dropdown-menu">
+						<ul class="dropdown-menu black-and-white">
 							<li><a
-								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"
-								style="color: black;"><i class="fa fa-user fa-fw"></i>View
-									Profile<br /> [<small sec:authentication="name">[email]</small>]
-							</a></li>
+								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"><i
+									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
+									sec:authentication="name">[email]</small>] </a></li>
 							<li class="divider"></li>
-							<li><a href="/user/changePassword" style="color: black;"><i
+							<li><a href="/user/changePassword"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
 							<li class="divider"></li>
-							<li><a href="/logout" style="color: black;"><i
-									class="fa fa-sign-out fa-fw"></i>Logout</a></li>
+							<li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i>Logout</a></li>
 						</ul></li>
 				</ul>
 			</div>
