--- a/src/main/resources/templates/userBookingHistory.html
+++ b/src/main/resources/templates/userBookingHistory.html
@@ -69,21 +69,19 @@
 					<li><a href="/index.html#portfolio" class="smoothScroll">GALLERY</a></li>
 					<li><a href="/index.html#plan" class="smoothScroll">PLANS</a></li>
 					<li><a href="/index.html#contact" class="smoothScroll">CONTACT</a></li>
-					<li class="dropdown pull-right" sec:authorize="isAuthenticated()"><a
-						href="#" data-toggle="dropdown" class="dropdown-toggle"><i
-							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
+					<li class="dropdown"><a href="#" data-toggle="dropdown"
+						class="dropdown-toggle"><i class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
-						<ul class="dropdown-menu">
+						<ul class="dropdown-menu black-and-white">
 							<li><a
-								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"
-								style="color: black;"><i class="fa fa-user fa-fw"></i>View
-									Profile<br /> [<small sec:authentication="name">[email]</small>]</a></li>
+								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"><i
+									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
+									sec:authentication="name">[email]</small>] </a></li>
 							<li class="divider"></li>
-							<li><a href="/user/changePassword" style="color: black;"><i
+							<li><a href="/user/changePassword"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
 							<li class="divider"></li>
-							<li><a href="/logout" style="color: black;"><i
-									class="fa fa-sign-out fa-fw"></i>Logout</a></li>
+							<li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i>Logout</a></li>
 						</ul></li>
 				</ul>
 			</div>
@@ -117,8 +115,9 @@
 							</a></li>
 							<li><a href="/user/changePassword"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
-							<li><a th:href="@{/user/walletTransaction/} + ${user.userId}">
-									<i class="fa fa-inr"></i> Wallet Details
+							<li><a
+								th:href="@{/user/walletTransaction/} + ${user.userId}"> <i
+									class="fa fa-inr"></i> Wallet Details
 							</a></li>
 						</ul>
 					</div>
@@ -142,11 +141,12 @@
 													<th>Booking Time</th>
 													<th>Expected In Time</th>
 													<th>Expected Out Time</th>
-												    <th>Actual In Time</th>
+													<th>Actual In Time</th>
 													<th>Actual Out Time</th>
 													<th>Picked Up From</th>
 													<th>Returned At</th>
-													<th>Fare</th>												</tr>
+													<th>Fare</th>
+												</tr>
 											</thead>
 											<tbody class="tblFontSize">
 												<tr th:each="booking : ${bookingHistory}">
@@ -156,8 +156,10 @@
 													<td class="text-center" th:text="${booking.expectedOut}"></td>
 													<td class="text-center" th:text="${booking.actualIn}"></td>
 													<td class="text-center" th:text="${booking.actualOut}"></td>
-													<td class="text-center" th:text="${booking.pickedUpFrom.location}"></td>
-													<td class="text-center" th:text="${booking.returnedAt.location}"></td>
+													<td class="text-center"
+														th:text="${booking.pickedUpFrom.location}"></td>
+													<td class="text-center"
+														th:text="${booking.returnedAt.location}"></td>
 													<td class="text-center" th:text="${booking.fare}"></td>
 												</tr>
 											</tbody>
