--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -67,21 +67,19 @@
 					<li><a href="/index.html#portfolio" class="smoothScroll">GALLERY</a></li>
 					<li><a href="/index.html#plan" class="smoothScroll">PLANS</a></li>
 					<li><a href="/index.html#contact" class="smoothScroll">CONTACT</a></li>
-					<li class="dropdown pull-right" sec:authorize="isAuthenticated()"><a
-						href="#" data-toggle="dropdown" class="dropdown-toggle"><i
-							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
+					<li class="dropdown"><a href="#" data-toggle="dropdown"
+						class="dropdown-toggle"><i class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
-						<ul class="dropdown-menu">
+						<ul class="dropdown-menu black-and-white">
 							<li><a
-								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"
-								style="color: black;"><i class="fa fa-user fa-fw"></i>View
-									Profile<br /> [<small sec:authentication="name">[email]</small>]
-							</a></li>
-							<li><a href="/user/changePassword" style="color: black;"><i
+								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"><i
+									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
+									sec:authentication="name">[email]</small>] </a></li>
+							<li class="divider"></li>
+							<li><a href="/user/changePassword"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
 							<li class="divider"></li>
-							<li><a href="/logout" style="color: black;"><i
-									class="fa fa-sign-out fa-fw"></i>Logout</a></li>
+							<li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i>Logout</a></li>
 						</ul></li>
 				</ul>
 			</div>
@@ -123,8 +121,9 @@
 									class=" fa fa-user fa-fw"></i>Edit Account</a></li>
 							<li><a href="/user/changePassword"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
-							<li><a th:href="@{/user/walletTransaction/} + ${user.userId}">
-									<i class="fa fa-inr"></i> Wallet Details
+							<li><a
+								th:href="@{/user/walletTransaction/} + ${user.userId}"> <i
+									class="fa fa-inr"></i> Wallet Details
 							</a></li>
 							<li><a th:href="@{/user/bookingHistory/} + ${user.userId}">
 									<i class="fa fa-history"></i> Booking History
