--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -182,7 +182,7 @@
 											</div>
 											<div class="col-md-6">
 												<input class="form-control" type="text" name="mobileNo"
-													maxlength="10" pattern="*[0-9]{10}"
+													maxlength="10" pattern="[0-9]{10}"
 													title="Enter only numbers" th:value="${user.mobileNo}"
 													required="required" />
 											</div>
