Fixed error and added javascript for validation.

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -16,7 +16,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand " th:href="@{/admin/adminHome}">Bicycle
+				<a class="navbar-brand " th:href="@{/index}">Bicycle
 					Sharing</a>
 			</div>
 
