--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -163,7 +163,7 @@
 						<div class="row">
 							<div class="col-md-3">
 								<p class="agreement input-lg">
-									<input type="checkbox" value="" tabindex="11"
+									<input type="checkbox" value="" tabindex="11" id="iAgreeId"
 										required="required" /> I Agree
 								</p>
 							</div>
@@ -205,7 +205,7 @@
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-primary"
-									data-dismiss="modal">I Agree</button>
+									data-dismiss="modal" onclick="iAgree();">I Agree</button>
 							</div>
 						</div>
 						<!-- /.modal-content -->
