Added datepicker on registration and add new user view. Fixed some css and validation errors.

--- a/src/main/resources/static/css/admin-styles.css
+++ b/src/main/resources/static/css/admin-styles.css
@@ -451,6 +451,16 @@ ul.nav.nav-second-level.collapse.in {
 }
 
 /*----------------------------------------------
+    UI ELEMENTS STYLES     
+------------------------------------------------*/
+.admin-footer {
+	height: 120px;
+	bottom: 0;
+	background-color: #babdb6;
+	padding: 20px;
+}
+
+/*----------------------------------------------
     MEDIA QUERIES     
 ------------------------------------------------*/
 @media ( min-width :768px) {
