--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -186,8 +186,7 @@
 		<!-- /. NAV SIDE  -->
 	</div>
 	<div th:fragment="page-footer">
-		<div class="footerDiv"
-			style="height: 100px; background-color: #babdb6; padding: 20px;">
+		<div class="footerDiv admin-footer">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3" align="left">
