--- a/src/main/resources/templates/userBookingPayment.html
+++ b/src/main/resources/templates/userBookingPayment.html
@@ -154,15 +154,15 @@
 									</div>
 									<div class="col-md-8">
 										<label class="radio-inline pull-left"> <input type="radio"
-											name="mode" value="cash" tabindex="1" />PayAt Pickup Point
+											name="mode" value="cash" tabindex="1" required="required"/>PayAt Pickup Point
 										</label>
 										<label class="radio-inline pull-right"> <input type="radio"
-											name="mode" value="wallet" tabindex="2" />Pay From Wallet
+											name="mode" value="wallet" tabindex="2" required="required"/>Pay From Wallet
 										</label><br/>
 										 <label class="radio-inline pull-left"> <input type="radio"
-											name="mode" value="debitCard" tabindex="3" />Debit Card
+											name="mode" value="debitCard" tabindex="3" required="required"/>Debit Card
 										</label> <label class="radio-inline pull-right"> <input type="radio"
-											name="mode" value="internetBanking" tabindex="4" />Internet
+											name="mode" value="internetBanking" tabindex="4" required="required"/>Internet
 											Banking
 										</label>
 									</div>
