--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -89,11 +89,11 @@
 									</div>
 									<div class="col-md-8">
 										<label class="radio-inline"> <input type="radio"
-											name="mode" value="cash" tabindex="2" />Cash
+											name="mode" value="cash" tabindex="2" required="required"/>Cash
 										</label> <label class="radio-inline"> <input type="radio"
-											name="mode" value="debitCard" tabindex="3" />Debit Card
+											name="mode" value="debitCard" tabindex="3" required="required"/>Debit Card
 										</label> <label class="radio-inline"> <input type="radio"
-											name="mode" value="internetBanking" tabindex="4" />Internet Banking
+											name="mode" value="internetBanking" tabindex="4" required="required"/>Internet Banking
 										</label>
 									</div>
 								</div>
