--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -153,7 +153,7 @@
 								<div class="form-group">
 									<input type="text" name="dateOfBirth"
 										class="form-control input-lg" id="datepicker"
-										onchange="checkDate();"
+										onsubmit="checkDate();"
 										placeholder="Date Of Birth(yyyy/mm/dd)" tabindex="9"
 										required="required" />
 								</div>
