--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -252,8 +252,8 @@
 			yearOffset : 0,
 			lang : 'ch',
 			timepicker : false,
-			format : 'd/m/Y',
-			formatDate : 'Y/m/d',
+			format : 'Y-m-d',
+			formatDate : 'Y-m-d',
 		});
 	</script>
 </body>
